# freight

./: .gitignore  Cargo.toml  README.md  freight
lib/: common.sh  logging.sh  socket.sh
scripts/: package.sh
src/: config.rs  daemon.rs  lib.rs  main.rs  socket.rs  tui.rs  worker.rs
